--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=seauser
 spring.datasource.password=seapass
 spring.datasource.url=jdbc:mariadb://localhost:3306/seadb
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+logging.level.root=info
+logging.level.de.telekom.sea3=debug
+logging.file.name=my.log
